# NetworkWithComplexNumbers

./: CMakeLists.txt  LICENSE  README  main.c
acnfl/: CMakeLists.txt  acnfl_derivative.c  acnfl_derivative.h  acnfl_math.c  acnfl_math.h
layers/: CMakeLists.txt  datasetTypes.c  datasetTypes.h  neuronLayer.c  neuronLayer.h
luaInterpret/: CMakeLists.txt  luaInterfaceHead.c  luaInterfaceHead.h
math/: math.h
reporting/: reporting_1.h  reporting_2.h  reporting_3.h  reporting_none.h
tests/: CMakeLists.txt  approx_tests.c  derivatives_test.c  neuronLayer_tests.c  testHead.c  testHead.h  tests.h
